--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mantine/form": "^8.3.5",
     "@mantine/hooks": "^8.3.5",
     "@mantine/modals": "^8.3.5",
+    "@mantine/notifications": "^8.3.6",
     "@mantine/nprogress": "^8.3.5",
     "@mantine/tiptap": "^8.3.5",
     "@tanstack/react-query": "^5.90.5",
